# oggybridge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  index.html  install.sh  logic-init.md  package-lock.json  package.json  updater.json  vite.config.ts
.agents/: AGENT_STATE.md  TASKS.md  config.toml
.agents/hooks/: post_tool_use.sh  pre_tool_use.sh
.antigravitycli/: 7cf49666-ec91-4360-99a4-d3ca5c6bf366.json  c07a16b2-6540-4751-abdc-8572cff0adc0.json  eee1fb02-15bc-44e6-8b00-c138eb56a07b.json
.claude/: settings.json
.claude/commands/: commit.md  release.md
.claude/memory/: project_release_lesson.md
.github/workflows/: release.yml
crates/hook_bridge/: Cargo.toml
crates/mcp_server/: Cargo.toml
crates/pty/: Cargo.toml
src/: App.css  App.tsx  agents.tsx  i18n.ts  idea.md  sessionStorage.ts  types.ts  utils.ts
src-tauri/: .gitignore  AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_session.rs  config.rs  idea.md  lib.rs  main.rs  system.rs  workspace.rs
src-tauri/src/agent_session/: antigravity.rs  claude.rs  codex.rs  mod.rs
src-tauri/src/config/: mod.rs  session.rs  settings.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/workspace/: commands.rs  mod.rs
src/editor/: BrowserPane.tsx  CodeEditor.tsx  EditorWorkspace.tsx  FileIcon.tsx  FileTree.tsx
src/hooks/: useSettings.ts  useUpdater.ts  useWorkspace.ts  useZoom.ts
src/overview/: CommandPalette.tsx  FileHeatmap.css  (+7 more)
ws-test/: .mcp.json
(+23 files in other folders)
