[package]
name = "oggybridge"
version = "0.1.9"
edition = "2021"

[lib]
name = "oggybridge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oggybridge-pty = { path = "../crates/pty" }
oggybridge-hook-bridge = { path = "../crates/hook_bridge" }
oggybridge-mcp-server = { path = "../crates/mcp_server" }
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
notify = "6"
notify-debouncer-mini = "0.4"
anyhow = "1"
